# ikart

./: CMakeLists.txt  README.md  index.html
app/: CMakeLists.txt
app/forceGuidance/: CMakeLists.txt
app/forceGuidance/scripts/: forceGuidance.xml.template
app/iKart/: CMakeLists.txt
app/iKart/conf/: batterySerialPort.ini  iKartCtrl.ini  iKartNav.ini  ikart_calib.xml  ikart_laser_hw.xml  ikart_main.xml  ikart_mc.xml  ikart_mc_wrapper.xml  ikart_wheels.ini  laserSerialPort.ini  laserSerialPortWin.ini  robotInterface.ini  yarpmotorgui.ini
app/iKart/ikart_boot/: .bashrc  ikart_motors_idle.sh  ikart_motors_run.sh  ikart_start.sh  ikart_stop.sh  rc.local
app/iKart/joystick_boot/: rc.local  start_ikart.sh  stop_ikart.sh
app/iKart/maps/: rbcsLab.rar  rbcsLab2.rar
app/iKart/scripts/: iKart.xml.template  iKartNav.xml  iKartROS.xml.template
app/iKartBoot/: .bashrc  CMakeLists.txt  ikart_stop.sh
app/iKartGoto/: CMakeLists.txt
app/iKartGoto/conf/: iKartGoto.ini
app/iKartGoto/scripts/: iKartGoto.xml.template  iKartGoto_no_laser.xml.template  ikartGoto.xml.template  ikartGoto_no_laser.xml.template
app/iKartMaps/: CMakeLists.txt
app/iKartNav/: CMakeLists.txt
app/iKartNav/scripts/: iKartNav.xml.template
app/iKartNavigation/: CMakeLists.txt
app/iKartNavigation/scripts/: iKart.xml  joystickBaseControl.xml  navigationWithAMCL.xml  navigationWithAMCLandMap.xml  navigationWithAMCLnoMap.xml
app/iKartPathPlanner/: CMakeLists.txt
app/iKartPathPlanner/conf/: iKartPathPlanner.ini
app/iKartPathPlanner/scripts/: iKartPathPlanner.xml.template
app/iKartRos/: ikart_build_map_v2.launch  robotStatePublisher.launch
app/iKartRos/launch/: ikart_laseronly_localize_from_ros.launch  ikart_laseronly_localize_from_yarp.launch  ikart_localize.launch  ikart_localize_from_ros.launch  ikart_localize_from_yarp.launch  ikart_navigate.launch  robotStatePublisher.launch  rviz_build_map.launch  rviz_navigate.launch
app/iKartRos/model/: ikart.urdf
app/iKartRos/rviz/: ikart_localization.rviz  ikart_navigation.rviz
app/iKartWirelessDisplay/: CMakeLists.txt
app/iKartWirelessDisplay/conf/: config.ini
app/laserScannerGui/: CMakeLists.txt  README.txt
app/robots/: CMakeLists.txt
app/robots/iKart01/: CMakeLists.txt  general.xml  ikart_laserOnly.xml  ikart_main.xml  yarpmotorgui.ini
app/robots/iKart01/calibrators/: ikart_calib.xml
app/robots/iKart01/hardware/: ikart_bcb_battery.xml  ikart_bms_battery.xml  ikart_laser_hw.xml  ikart_mc.xml  ikart_mc_old.xml  laserSerialPortLinux.ini  laser_serial_port_linux.xml  laser_serial_port_win.xml
app/robots/iKart01/wrappers/: ikart_battery.xml  ikart_laser_wrapper.xml  ikart_mc_wrapper.xml  ikart_mc_wrapper_old.xml
doxygen/: generate.txt
doxygen/doc/html/: CtrlThread_8h_source.html  Navigator_8cpp_source.html  Navigator_8h_source.html  TargetFilter_8h_source.html  Vec2D_8cpp_source.html  Vec2D_8h_source.html  aStar_8h_source.html  bridgeThread_8cpp_source.html  bridgeThread_8h_source.html  compassThread_8cpp_source.html  compassThread_8h_source.html  controlThread_8cpp_source.html  controlThread_8h_source.html  dir_0b8668989739bf2a3264b87dfe58852e.html  dir_0d809422b59c685fcb77601a1b4c3a06.html  dir_16017327ba2decd97fc66ef9d486722f.html  dir_1f1b800b93334c439b3cc6665b68b74f.html  dir_40768bbde37f5af8e4fea91d77c97b49.html  dir_45f6e956f71aa06d3df074bcc5e0dcc3.html  dir_4d5aca832f9c0672e285fce6aa9a27ae.html  dir_66f460a5efc4ddf8c9c7da9b3e3e46fc.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7335d887aad74a65ded84584de18e44d.html  dir_7781abbb08dbf6f7d0520cecf7700c82.html  dir_a0e55278d74a697a561daad0a0dec219.html  dir_b26c74f12371d83fa8a0742d7e10dc7b.html  dir_c1c9f02a4bf2261e5e62d7b9847944b2.html  files.html  filters_8cpp_source.html  filters_8h_source.html  forceGuidance_2main_8cpp_source.html  group__commandGenerator.html  group__foceGuidance.html  group__iKartBattery.html  group__iKartCtrl.html  group__iKartNav.html  group__iKartWireless.html  group__laserScannerGui.html  iKartBatteryDisplay_2graphics_8cpp_source.html  iKartBatteryDisplay_2graphics_8h_source.html  (+31 more)
gazebo/: database.config
gazebo/ikart/: ikart.sdf  model.config
gazebo/ikart_v1/: ikart_v1.sdf  model.config
gazebo/ikart_wheels_friction/: ikart_wheels_friction.sdf  model.config
src/: CMakeLists.txt
src/armsTucker/: armsTucker.cpp
src/forceGuidance/: CMakeLists.txt  main.cpp
src/iKartBatteryDisplay/: CMakeLists.txt  Readme.txt  graphics.cpp  graphics.h  main.cpp
src/iKartBatteryManager/: CMakeLists.txt  Readme.txt  main.cpp
src/iKartCtrl/: CMakeLists.txt  Readme.txt  compassThread.cpp  compassThread.h  controlThread.cpp  controlThread.h  filters.cpp  filters.h  laserThread.cpp  laserThread.h  main.cpp  motors.cpp  motors.h  motorsThread.cpp  motorsThread.h  odometry.cpp  odometry.h  odometryThread.cpp  odometryThread.h
src/iKartCtrl2/: CMakeLists.txt  compassThread.h  controlThread.cpp  controlThread.h  filters.cpp  filters.h  main.cpp  motors.cpp  motors.h  odometry.cpp  odometry.h
src/iKartGoto/: CMakeLists.txt  ikartGoto.cpp  ikartGoto.h  main.cpp  status.h
src/iKartNav/: CMakeLists.txt  CtrlThread.h  LaserThread.h  NavThread.cpp  Navigator.cpp  Navigator.h  TargetFilter.h  Vec2D.h  main.cpp
src/iKartPathPlanner/: CMakeLists.txt  aStar.h  ikartPlanner.cpp  ikartPlanner.h  main.cpp  map.cpp  map.h  status.h
src/iKartRosBridge/: CMakeLists.txt  Readme.txt  bridgeModule.h  bridgeThread.cpp  bridgeThread.h  main.cpp  manifest.xml
src/iKartRosBridge/config/: base_local_planner_params.yaml  costmap_common_params.yaml
src/iKartRosBridge/display/: rviz_navigation.vcg
src/iKartRosBridge/launch/: ikart_build_map.launch  ikart_build_map.vcg  ikart_laseronly_localize.launch  ikart_localize.launch  ikart_navigate2.launch  ikart_rviz.launch  load_map.sh  ros_start_all.sh  save_map.sh
src/iKartSpeedTest/: CMakeLists.txt  main.cpp
src/iKartUtils/: CMakeLists.txt  main.cpp
src/iKartWirelessDisplay/: CMakeLists.txt  graphics.cpp  main.cpp
src/laserScannerGui/: CMakeLists.txt  main.cpp
src/laserUtils/: CMakeLists.txt  main.cpp
(+32 files in other folders)
