#
# Copyright (C) 2010 RobotCub Consortium
# Author: Marco Randazzo marco.randazzo@iit.it
# CopyPolicy: Released under the terms of the GNU GPL v2.0.
#

add_subdirectory(iKart)
add_subdirectory(iKartGoto)
add_subdirectory(iKartNav)
add_subdirectory(iKartPathPlanner)
add_subdirectory(laserScannerGui)
add_subdirectory(forceGuidance)
add_subdirectory(iKartWirelessDisplay)

