#
# Copyright (C) 2010 RobotCub Consortium
# Author: Marco Randazzo marco.randazzo@iit.it
# CopyPolicy: Released under the terms of the GNU GPL v2.0.
#

add_subdirectory(iKartCtrl)
add_subdirectory(iKartNav)
add_subdirectory(iKartBatteryManager)
add_subdirectory(iKartSpeedTest)
add_subdirectory(iKartBatteryDisplay)
add_subdirectory(forceGuidance)
add_subdirectory(iKartUtils)
add_subdirectory(iKartGoto)
add_subdirectory(iKartPathPlanner)
add_subdirectory(laserUtils)
add_subdirectory(iKartWirelessDisplay)



